--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "amazon-cognito-identity-js": "^6.3.16",
+    "crypto-js": "^4.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
